@@ -17,6 +17,7 @@
 #
 ################################################################################
 
+# NOTE: Lines starting with a '#' are comments provided to assist the user.
 
 # ==============================================================================
 # The sections in this file should match with the parameter used to work with 
