@@ -17,9 +17,11 @@
 #
 ################################################################################
 
+# NOTE: Lines starting with a '#' are comments provided to assist the user.
 
 # ==============================================================================
 # In this section we will define the browser configuration.
+# ------------------------------------------------------------------------------
 
 [Browser]
 
@@ -32,6 +34,7 @@ user_agent = Mozilla/5.0 (Windows NT 5.1; rv:31.0) Gecko/20100101 Firefox/31.0
 
 # ==============================================================================
 # In this section we will define the proxy settings. This part is optional.
+# ------------------------------------------------------------------------------
 
 [Proxy]
 
