@@ -2,6 +2,7 @@ For more information, check the README.md in <http://github.com/i3visio/osrframe
 
 0.11.0a, 2016/02/14 -- Adding configuration files so as to let the user configure credentials and API keys.
 - Fixed issue #51: settings for credentials, API keys and connectivity are now stored in the user's home.
+- Added a browser.cfg to let the user configure OSRFramework browser settings such as the way in which it gets connected to the internet or the user agent.
 
 0.10.5, 2016/02/13 -- Fixed issue #86, Metacafe is returning false positives.
 - Fixed issue #86: Metacafe was returning false positives and the error was updated.
